     fixes a bug reported by Aaron Bentley on IRC. (Ian Clatworthy)

   * Trivial fix for invoking command ``reconfigure`` without arguments.
     (Rob Weir, #141629)

   * ``WorkingTree.rename_one`` will now raise an error if normalisation of the
     new path causes bzr to be unable to access the file. (Robert Collins)

  API BREAKS:

   * ``KnitVersionedFile.add*`` will no longer cache added records even when
     enable_cache() has been called - the caching feature is now exclusively for
     reading existing data. (Robert Collins)

   * The ``VersionedFile`` interface now allows content checks to be bypassed
     by supplying check_content=False.  This saves nearly 30% of the minimum
     cost to store a version of a file. (Robert Collins)

   * Tree's with bad state such as files with no length or sha will no longer
     be silently accepted by the repository XML serialiser. To serialise
     inventories without such data, pass working=True to write_inventory.
     (Robert Collins)

   * ``VersionedFile.fix_parents`` has been removed as a harmful API.
     ``VersionedFile.join`` will no longer accept different parents on either
     side of a join - it will either ignore them, or error, depending on the
     implementation. See notes when upgrading for more information.
     (Robert Collins)

  INTERNALS:

    * ``bzrlib.transport.Transport.put_file`` now returns the number of bytes
      put by the method call, to allow avoiding stat-after-write or
      housekeeping in callers. (Robert Collins)

   * New class ``bzrlib.errors.InternalBzrError`` which is just a convenient
     shorthand for deriving from BzrError and setting internal_error = True.
     (Robert Collins)

   * New method ``bzrlib.osutils.minimum_path_selection`` useful for removing
     duplication from user input, when a user mentions both a path and an item
     contained within that path. (Robert Collins)

   * New method on xml serialisers, write_inventory_to_lines, which matches the