@@ -111,6 +111,10 @@ IN DEVELOPMENT
 
   API BREAKS:
 
+   * ``CommitBuilder.record_entry_contents`` now requires the root entry of a
+     tree be supplied to it, previously failing to do so would trigger a
+     deprecation warning. (Robert Collins)
+
    * ``KnitVersionedFile.add*`` will no longer cache added records even when
      enable_cache() has been called - the caching feature is now exclusively for
      reading existing data. (Robert Collins)
